--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body{
     width:100%;
-    height:100vh;
+    min-height:100vh;
     display:flex;
     flex-direction:column;
     justify-content:space-evenly;
